--- a/3 Question/index.html
+++ b/3 Question/index.html
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3rd Question</title>
     <script>
-        var name = 'my name is ali sher';
+        
+
+        
+        var name = 'my NaMe is aLi sHEr';
+        //lowercase
+        console.log(name.toLowerCase());
+        //Uppercase
+        console.log(name.toUpperCase());
+        //title case
         console.log(name.split(" ").map(word => word.charAt(0).toUpperCase() + word.substr(1).toLowerCase()).join(" "));
 
     </script>
